fix scrolling on firefox

--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -11,8 +11,14 @@
   display: flex;
   flex-direction: column-reverse;
   flex: 1;
-  overflow: overlay;
-  padding: 0 16px;
+  overflow: auto;
+  padding-left: 16px;
+}
+
+@-moz-document url-prefix() {
+  .Chat .chat-box {
+    padding-right: 16px;
+  }
 }
 
 .Chat .chat-box #scroller * {
@@ -51,7 +57,13 @@
 
 @media only screen and (max-width: 400px) {
   .Chat .chat-box {
-    padding: 0 12px;
+    padding-left: 12px;
+  }
+
+  @-moz-document url-prefix() {
+    .Chat .chat-box {
+      padding-right: 12px;
+    }
   }
 
   .Chat .comment-form {
